@@ -29,6 +29,7 @@ struct fuse {
     int numavail;
     volatile int exited;
     int got_init;
+    void *user_data;
 };
 
 struct fuse *fuse_new_common(int fd, const char *opts,
